# bookscraper_backend

./: .env.example  .env.test  .gitignore  README.md  alembic.ini  app-deployment.yaml  app-service.yaml  backend.py  backend_api.py  database.py  db-deployment.yaml  db-service.yaml  db_models.py  docker-compose.override.yml  docker-compose.yml  dockerfile  graph_db.py  graph_models.py  graphs.py  logger.py  models.py  profile_analysis.py  pyproject.toml  setup.py  trial.py  utils.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 10b26d4be2ce_start_basic_database.py  66a8412f492c_region_should_always_have_a_country.py  7a88540c54f4_start_db.py
bookscraper_backend/: backend.py  backend_api.py  config.py  setup.py
bookscraper_backend/database/: db_models.py  setup.py
bookscraper_backend/tests/: test_api.py  test_backend.py  test_db_models.py  test_integration.py
docker/backend/: dockerfile  entrypoint.sh
docker/db/: dockerfile
docker/graph_db/: dockerfile
migrations/: env.py
migrations/versions/: 6cabf02789e2_add_columns_to_author_table.py  e216d7ecdc8c_create_author_table.py
profile/: initial_profile.prof  new_profile.prof
src/: backend_api.py
src/tests/: test_api.py  test_backend.py  test_db_models.py  test_integration.py
tests/: test_api.py  test_backend.py  test_db_models.py  test_integration.py  test_utils.py
