[tool.poetry]
name = "bookscraper-backend"
version = "0.1.0"
description = ""
authors = ["Tamir Einhorn Salem <tamtamireinhorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
goodreads-scraper = { git = "https://github.com/tamireinhorn/Goodreads-Scraper.git", branch = "main" }
plotly-geo = "^1.0.0"
plotly = "^5.18.0"
pandas = "^2.2.0"
pycountry = "^23.12.11"
geopy = "^2.4.1"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
