[tool.poetry]
name = "bookscraper-backend"
version = "0.1.0"
description = ""
authors = ["Tamir Einhorn Salem <tamtamireinhorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
goodreads-scraper = { git = "https://github.com/tamireinhorn/Goodreads-Scraper.git", branch = "main" }
pandas = "^2.2.0"
pycountry = "^23.12.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
werkzeug = "^3.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
